--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -191,8 +191,7 @@ hr.star-user:after {
 }
 
 .btnpadding {
-	padding-top: 35px;
-	padding-bottom: 35px;
+	margin-left: 20px;
 }
 .btnpadding_top {			
 	padding-top: 15px;
