--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -190,6 +190,9 @@ hr.star-user:after {
 .details td {
 	text-align: right;
 }
+.left-align td {
+	text-align: left;
+}
 
 .btnpadding {
 	margin-left: 20px;
