--- a/views/index.ejs
+++ b/views/index.ejs
@@ -86,8 +86,12 @@
 						<a href="/#/profile" class="visible-xs" data-toggle="collapse" data-target=".navbar-collapse">Profile</a>
 					</li>
 					<li>
-						<a href="/#/tournaments" class="hidden-xs">Turniere</a>
-						<a href="/#/tournaments" class="visible-xs" data-toggle="collapse" data-target=".navbar-collapse">Turniere</a>
+						<a href="/#/tournaments" class="hidden-xs">Tournaments</a>
+						<a href="/#/tournaments" class="visible-xs" data-toggle="collapse" data-target=".navbar-collapse">Tournaments</a>
+					</li>
+					<li>
+						<a href="/#/anmeldungen" class="hidden-xs">Reg Overview</a>
+						<a href="/#/anmeldungen" class="visible-xs" data-toggle="collapse" data-target=".navbar-collapse">Reg Overview</a>
 					</li>
 					<li ng-show="istVorstand">
 						<a href="/#/vorstand" class="hidden-xs">Vorstand</a>
