--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -163,6 +163,16 @@ hr.star-user:after {
 	border-radius: 50%;
 }
 
+.image-cropper2 {
+	position: relative;
+	overflow: hidden;
+	width: 20px;
+	height: 20px;
+	margin: 0 auto;
+	border:4px solid gainsboro;
+	border-radius: 50%;
+}
+
 .image-cropper label{
 }
 
@@ -190,7 +200,7 @@ hr.star-user:after {
 .details td {
 	text-align: right;
 }
-.left-align td {
+.left-align td, th {
 	text-align: left;
 }
 
