got upload of user pics to BDU Server to work

--- a/views/reset.ejs
+++ b/views/reset.ejs
@@ -33,6 +33,21 @@
 	<link href="/timepicker/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
 
 </head>
+<script type="text/javascript">
+	var password = document.getElementById("password")
+	, confirm_password = document.getElementById("confirm_password");
+
+	function validatePassword(){
+		if(password.value != confirm_password.value) {
+			confirm_password.setCustomValidity("Passwords Don't Match");
+		} else {
+			confirm_password.setCustomValidity('');
+		}
+	}
+
+	password.onchange = validatePassword;
+	confirm_password.onkeyup = validatePassword;
+</script>
 <body>
 	<nav class="navbar navbar-inverse navbar-fixed-top navbar-toggleable-md bg-inverse">
 		<div class="navbar-header">
