--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,7 +16,9 @@ h1,h2,h3,h4,h5,h6 {
 
 header {
 	text-align: center;
-	background: #FFF;
+	background-image: url('http://www.debating.de/BDUDBdev/Berlin_Panorama_mit_Fernsehturm.jpg');
+	background-repeat: no-repeat;
+	background-size: 100%;
 }
 header .container {
 	padding-top: 100px;
@@ -37,6 +39,8 @@ header .intro-text .name {
 header .intro-text .skills {
 	font-size: 1.25em;
 	font-weight: 300;
+	background-color: #FFF;
+	background-size: 1.40em;
 }
 @media (min-width: 768px) {
 	header .container {
@@ -70,15 +74,6 @@ hr.star-light, hr.star-user, hr.star-comments {
 	text-align: center;
 	max-width: 250px;
 	margin: 25px auto 30px;
-}
-hr.star-light:after {
-	content: "\f111";
-	font-family: FontAwesome;
-	display: inline-block;
-	position: relative;
-	top: -0.8em;
-	font-size: 2em;
-	padding: 0 0.25em;
 }
 hr.star-user:after {
 	content: "\f007";
