--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<title>BDUDB</title>
-	
+
 	<!-- load javascripts -->
 
 	<!-- jQuery -->
@@ -25,10 +25,7 @@
 	<script type="text/javascript" src="/timepicker/jquery/jquery-1.8.3.min.js" charset="UTF-8"></script>
 	<script type="text/javascript" src="/timepicker/bootstrap/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="/timepicker/js/bootstrap-datetimepicker.js" charset="UTF-8"></script>
-	<!-- <script type="text/javascript" src="/timepicker/js/locales/bootstrap-datetimepicker.fr.js" charset="UTF-8"></script> -->
 	<script type="text/javascript" src="/moment/moment.js"></script>
-	<script type="text/javascript" src="/angular-bootstrap-datetimepicker/src/js/datetimepicker.js"></script>
-	<script type="text/javascript" src="/angular-bootstrap-datetimepicker/src/js/datetimepicker.templates.js"></script>
 
 	<!-- ngDialog -->
 	<script src="/ng-dialog/js/ngDialog.js"></script>
@@ -57,7 +54,6 @@
 	<!-- load bootstrap timepicker -->
 	<link href="/timepicker/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
 	<link href="/timepicker/css/bootstrap-datetimepicker.min.css" rel="stylesheet" media="screen">
-	<!-- <link rel="stylesheet" href="node_modules/angular-bootstrap-datetimepicker/src/css/datetimepicker.css"/> -->
 
 	<!-- ngDialog -->
 	<link rel="stylesheet" href="/ng-dialog/css/ngDialog.min.css">
@@ -69,7 +65,7 @@
 
 		<!--++++++++++++++++++++++++++ NAVBAR ++++++++++++++++++++++++++-->
 
-		<nav class="navbar navbar-inverse navbar-fixed-top navbar-toggleable-md bg-inverse">
+		<nav class="navbar navbar-inverse navbar-fixed-top navbar-toggleable-sm bg-inverse">
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarBDUDB" aria-controls="navbarBDUDB" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -114,7 +110,7 @@
 					<li><a href="/#/signup" class="hidden-xs"><span class="glyphicon glyphicon glyphicon-user"></span> Signup</a></li>
 					<li><a href="/#/signup" class="visible-xs" data-toggle="collapse" data-target=".navbar-collapse"><span class="glyphicon glyphicon glyphicon-user"></span> Signup</a></li>
 				</ul>
-				
+
 			</div>
 		</nav>
 
