--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,22 +13,18 @@
 	<!-- lodash -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
 
+	<!-- tether.io -->
+	<script src="https://cdn.rawgit.com/HubSpot/tether/v1.3.4/dist/js/tether.min.js"></script>
+
 	<!-- angular -->
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular-route.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular-resource.min.js"></script>
 
-	<!-- bootstrap -->
-	<script src="/bootstrap/js/bootstrap.min.js"></script>
-
-	<!-- timepicker -->
-	<script type="text/javascript" src="/timepicker/jquery/jquery-1.8.3.min.js" charset="UTF-8"></script>
-	<script type="text/javascript" src="/timepicker/bootstrap/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="/timepicker/js/bootstrap-datetimepicker.js" charset="UTF-8"></script>
-	<script type="text/javascript" src="/moment/moment.js"></script>
-
 	<!-- ngDialog -->
 	<script src="/ng-dialog/js/ngDialog.js"></script>
+	<link rel="stylesheet" href="/ng-dialog/css/ngDialog.min.css">
+	<link rel="stylesheet" href="/ng-dialog/css/ngDialog-theme-default.min.css">
 
 	<!-- ng-file-upload -->
 	<script src="/javascripts/ng-file-upload/ng-file-upload-shim.min.js"></script>
@@ -37,81 +33,85 @@
 	<!-- ng-img-crop -->
 	<script src="/javascripts/ng-img-crop/js/ng-img-crop.js"></script>
 
-	<script src="/javascripts/bduApp.js"></script>
-
-	<!-- load stylesheets -->
-
 	<!-- bootstrap -->
+	<script src="/bootstrap/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
 
-
-	<!-- load fontawesome -->
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-
-	<link rel="stylesheet" href="/stylesheets/style.css">
-
-	<!-- load bootstrap timepicker -->
+	<!-- timepicker -->
+	<script type="text/javascript" src="/timepicker/jquery/jquery-1.8.3.min.js" charset="UTF-8"></script>
+	<script type="text/javascript" src="/timepicker/bootstrap/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="/timepicker/js/bootstrap-datetimepicker.js" charset="UTF-8"></script>
 	<link href="/timepicker/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
 	<link href="/timepicker/css/bootstrap-datetimepicker.min.css" rel="stylesheet" media="screen">
 
-	<!-- ngDialog -->
-	<link rel="stylesheet" href="/ng-dialog/css/ngDialog.min.css">
-	<link rel="stylesheet" href="/ng-dialog/css/ngDialog-theme-default.min.css">
+	<!--<script type="text/javascript" src="/moment/moment.js"></script>-->
+
+	<!-- fontawesome -->
+	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
+
+	<!--OWN FILES-->
+	<script src="/javascripts/bduApp.js"></script>
+
+	<link rel="stylesheet" href="/stylesheets/style.css">
 
 </head>
 <body>
 
 <!--++++++++++++++++++++++++++ NAVBAR ++++++++++++++++++++++++++-->
 
-<nav class="navbar navbar-inverse navbar-fixed-top navbar-toggleable-sm bg-inverse">
+<nav class="navbar navbar-inverse navbar-fixed-top navbar-toggleable-md bg-inverse">
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarBDUDB" aria-controls="navbarBDUDB" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
 	</button>
 	<div class="collapse navbar-collapse" id="navbarBDUDB">
 
 		<div class="navbar-header">
-			<a class="navbar-brand" href="/">
+			<a class="navbar-brand" href="#/profile">
 				<span class="glyphicon glyphicon-cloud"></span>
 				BDUDB
 			</a>
 		</div>
 		<ul class="nav navbar-nav" ng-hide="!authenticated">
 			<li>
-				<a href="/#/profile" class="hidden-xs">Profile</a>
-				<a href="/#/profile" class="visible-xs" data-toggle="collapse" data-target=".navbar-collapse">Profile</a>
+				<a href="/#/profile" class="hidden-md">Profile</a>
+				<a href="/#/profile" class="visible-md" data-toggle="collapse" data-target=".navbar-collapse">Profile</a>
 			</li>
 			<li>
-				<a href="/#/tournaments" class="hidden-xs">Tournaments</a>
-				<a href="/#/tournaments" class="visible-xs" data-toggle="collapse" data-target=".navbar-collapse">Tournaments</a>
+				<a href="/#/tournaments" class="hidden-md">Tournaments</a>
+				<a href="/#/tournaments" class="visible-md" data-toggle="collapse" data-target=".navbar-collapse">Tournaments</a>
 			</li>
 			<li>
-				<a href="/#/anmeldungen" class="hidden-xs">Reg Overview</a>
-				<a href="/#/anmeldungen" class="visible-xs" data-toggle="collapse" data-target=".navbar-collapse">Reg Overview</a>
+				<a href="/#/anmeldungen" class="hidden-md">Reg Overview</a>
+				<a href="/#/anmeldungen" class="visible-md" data-toggle="collapse" data-target=".navbar-collapse">Reg Overview</a>
 			</li>
 			<li ng-show="istVorstand">
-				<a href="/#/vorstand" class="hidden-xs">Vorstand</a>
-				<a href="/#/vorstand" class="visible-xs" data-toggle="collapse" data-target=".navbar-collapse">Vorstand</a>
+				<a href="/#/vorstand" class="hidden-md">Vorstand</a>
+				<a href="/#/vorstand" class="visible-md" data-toggle="collapse" data-target=".navbar-collapse">Vorstand</a>
 			</li>
 		</ul>
 
-		<ul class="nav navbar-nav navbar-right" ng-hide="!authenticated">
+		<ul class="nav navbar-nav navbar-right hidden-md" ng-hide="!authenticated">
+			<a href="/#/profile">
+				<img class="nav-image" ng-src="http://debating.de/BDUDBdev/userpics/{{user.image}}" onerror="this.src='images/bdu_quad.png'" alt=""/>
+			</a>
 			<p class="navbar-right navbar-text">Signed in as {{user.vorname}}</p>
 			<li>
-				<a href="/#" class="hidden-xs" ng-click="signout()"><span class="glyphicon glyphicon-log-out"></span> Logout</a>
-				<a href="/#" class="visible-xs" data-toggle="collapse" data-target=".navbar-collapse" ng-click="signout()"><span class="glyphicon glyphicon-log-out"></span> Logout</a>
+				<a href="/#" class="hidden-md" ng-click="signout()"><span class="glyphicon glyphicon-log-out"></span> Logout</a>
+				<a href="/#" class="visible-md" data-toggle="collapse" data-target=".navbar-collapse" ng-click="signout()"><span class="glyphicon glyphicon-log-out"></span> Logout</a>
 			</li>
 		</ul>
 
 		<ul class="nav navbar-nav navbar-right" ng-show="!authenticated">
-			<li><a href="/#" class="hidden-xs"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-			<li><a href="/#" class="visible-xs" data-toggle="collapse" data-target=".navbar-collapse"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-			<li><a href="/#/signup" class="hidden-xs"><span class="glyphicon glyphicon glyphicon-user"></span> Signup</a></li>
-			<li><a href="/#/signup" class="visible-xs" data-toggle="collapse" data-target=".navbar-collapse"><span class="glyphicon glyphicon glyphicon-user"></span> Signup</a></li>
+			<li><a href="/#" class="hidden-md"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+			<li><a href="/#" class="visible-md" data-toggle="collapse" data-target=".navbar-collapse"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+			<li><a href="/#/signup" class="hidden-md"><span class="glyphicon glyphicon glyphicon-user"></span> Signup</a></li>
+			<li><a href="/#/signup" class="visible-md" data-toggle="collapse" data-target=".navbar-collapse"><span class="glyphicon glyphicon glyphicon-user"></span> Signup</a></li>
 		</ul>
 
 	</div>
 </nav>
 
 <div ng-view></div>
+
 </body>
 </html>
