--- a/views/index.ejs
+++ b/views/index.ejs
@@ -113,5 +113,10 @@
 
 <div ng-view></div>
 
+<!-- SNACKBARS -->
+
+<strong id="snackbarSuccess" class="alert alert-success"></strong>
+<strong id="snackbarError" class="alert alert-danger"></strong>
+
 </body>
 </html>
