--- a/views/index.ejs
+++ b/views/index.ejs
@@ -113,6 +113,16 @@
 
 <div ng-view></div>
 
+
+<!-- LINK TO BUG REPORT PAGE -->
+<div class="footer-bottom col-md-11">
+		<div class="design pull-right" style="text-align: center">
+			<a href="/#/bugReport">Report a Problem</a>
+		</div>
+</div>
+
+
+
 <!-- SNACKBARS -->
 
 <strong id="snackbarSuccess" class="alert alert-success"></strong>
