--- a/views/index.ejs
+++ b/views/index.ejs
@@ -111,22 +111,24 @@
 	</div>
 </nav>
 
-<div ng-view></div>
+<div ng-view class="content"></div>
 
 
 <!-- LINK TO BUG REPORT PAGE -->
-<div class="footer-bottom col-md-11">
-		<div class="design pull-right" style="text-align: center">
-			<a href="/#/bugReport">Report a Problem</a>
-		</div>
-</div>
-
-
+<footer class="footer">
+	<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+		<div>© Berlin Debating Union e.V., 2017</div>
+	</div>
+	<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 pull-right">
+		<a href="/#/bugReport">Report a Problem</a>
+	</div>
+</footer>
 
 <!-- SNACKBARS -->
 
 <strong id="snackbarSuccess" class="alert alert-success"></strong>
 <strong id="snackbarError" class="alert alert-danger"></strong>
+
 
 </body>
 </html>
