--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -69,10 +69,6 @@ header .intro-text .skills {
 	}
 }
 
-footer {
-	margin-bottom: 70px;
-}
-
 section {
 	padding: 30px 0;
 }
@@ -544,12 +540,26 @@ form .progress {
 }
 
 /*FOOTER*/
+html, body {
+    height: 100%;
+    margin: 0;
+}
 
-.footer-bottom {
-    bottom : 0;
-    position: relative;
-    min-height: 30px;
-    width: 100%;
-    /*margin-top : 10px;*/
-    margin-bottom: 3px;
+.content {
+    min-height: 100%;
+    margin: 0 auto -50px;
+}
+
+footer {
+    position: 0;
+    border-top: solid 1px;
+    border-color: #1b1b1b;
+    background: #f7f7f7;
+    line-height: 40px;
+    padding: 0 20px;
+    margin-top: 30px;
+}
+
+.footer {
+    height: 40px;
 }
