--- a/views/index.ejs
+++ b/views/index.ejs
@@ -116,7 +116,7 @@
 
 <!-- LINK TO BUG REPORT PAGE -->
 <footer class="footer">
-	<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+	<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 hidden-xs">
 		<div>© Berlin Debating Union e.V., 2017</div>
 	</div>
 	<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 pull-right">
