added finance view; fixed bugs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -87,6 +87,10 @@
 				<a href="/#/vorstand" class="hidden-xs hidden-sm">Vorstand</a>
 				<a href="/#/vorstand" class="visible-xs visible-sm" data-toggle="collapse" data-target=".navbar-collapse">Vorstand</a>
 			</li>
+			<li ng-show="istVorstand">
+				<a href="/#/finances" class="hidden-xs hidden-sm">Finanzen</a>
+				<a href="/#/finances" class="visible-xs visible-sm" data-toggle="collapse" data-target=".navbar-collapse">Finanzen</a>
+			</li>
 		</ul>
 
 		<ul class="nav navbar-nav navbar-right" ng-show="authenticated">
