--- a/views/index.ejs
+++ b/views/index.ejs
@@ -97,12 +97,12 @@
 			<!--SCHULDENUHR-->
 			<div class="hidden-xs hidden-sm hidden-md" style="margin-right: 15px">
 				<span class="help-tip">
-					<label ng-hide="personnelDebt<0">{{personnelDebt}}€/</label>
+					<label ng-hide="personnelDebt<0" style="color: #2ab269">{{personnelDebt}}€/</label>
 					<label ng-show="personnelDebt<0" style="color: #db2a28">{{personnelDebt}}€/</label>
 					<p>This is how much you currently owe the BDU.</p>
 				</span>
 				<span class="help-tip">
-					<label ng-hide="totalDebt<0">{{totalDebt}}€</label>
+					<label ng-hide="totalDebt<0" style="color: #2ab269">{{totalDebt}}€</label>
 					<label ng-show="totalDebt<0" style="color: #db2a28">{{totalDebt}}€</label>
 					<p>This is how much all members combined currently owe the BDU.</p>
 				</span>
