--- a/views/index.ejs
+++ b/views/index.ejs
@@ -94,24 +94,19 @@
 		</ul>
 
 		<ul class="nav navbar-nav navbar-right" ng-show="authenticated">
-			<!--SCHULDENUHR-->
-			<div class="hidden-xs hidden-sm hidden-md" style="margin-right: 15px">
-				<span class="help-tip">
-					<label ng-hide="personnelDebt<0" style="color: #2ab269">{{personnelDebt}}€/</label>
-					<label ng-show="personnelDebt<0" style="color: #db2a28">{{personnelDebt}}€/</label>
-					<p>This is how much you currently owe the BDU.</p>
-				</span>
-				<span class="help-tip">
-					<label ng-hide="totalDebt<0" style="color: #2ab269">{{totalDebt}}€</label>
-					<label ng-show="totalDebt<0" style="color: #db2a28">{{totalDebt}}€</label>
-					<p>This is how much all members combined currently owe the BDU.</p>
-				</span>
-			</div>
-
 			<a href="/#/profile" class="hidden-xs hidden-sm">
 				<img class="nav-image" ng-src="http://debating.de/BDUDBdev/userpics/{{user.image}}" onerror="this.src='images/bdu_quad.png'" alt=""/>
 			</a>
 			<p class="navbar-right navbar-text">Signed in as {{user.vorname}}</p>
+
+			<!--SCHULDEN-->
+			<div class="hidden-xs hidden-sm hidden-md" style="margin-right: 15px">
+				<span class="help-tip">
+					<label ng-hide="personnelDebt<0" style="color: #2ab269">{{personnelDebt}}€</label>
+					<label ng-show="personnelDebt<0" style="color: #db2a28">{{personnelDebt}}€</label>
+					<p>This is how much you currently owe the BDU.</p>
+				</span>
+			</div>
 
 			<li>
 				<a href="/#" class="hidden-xs hidden-sm" ng-click="signout()"><span class="glyphicon glyphicon-log-out"></span> Logout</a>
