added inline update and delete of registration in profile page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -94,7 +94,7 @@
 		</ul>
 
 		<ul class="nav navbar-nav navbar-right" ng-show="authenticated">
-			<a href="/#/profile" class="hidden-xs hidden-sm">
+			<a href="/#/profile" class="hidden-xs hidden-sm hidden-md">
 				<img class="nav-image" ng-src="http://debating.de/BDUDBdev/userpics/{{user.image}}" onerror="this.src='images/bdu_quad.png'" alt=""/>
 			</a>
 			<p class="navbar-right navbar-text">Signed in as {{user.vorname}}</p>
