--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,9 +22,9 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular-resource.min.js"></script>
 
 	<!-- ngDialog -->
-	<script src="/ng-dialog/js/ngDialog.js"></script>
-	<link rel="stylesheet" href="/ng-dialog/css/ngDialog.min.css">
-	<link rel="stylesheet" href="/ng-dialog/css/ngDialog-theme-default.min.css">
+	<script src="/javascripts/ng-dialog/js/ngDialog.js"></script>
+	<link rel="stylesheet" href="/javascripts/ng-dialog/css/ngDialog.min.css">
+	<link rel="stylesheet" href="/javascripts/ng-dialog/css/ngDialog-theme-default.min.css">
 
 	<!-- ng-file-upload -->
 	<script src="/javascripts/ng-file-upload/ng-file-upload-shim.min.js"></script>
