--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,11 +38,11 @@
 	<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
 
 	<!-- timepicker -->
-	<script type="text/javascript" src="/timepicker/jquery/jquery-1.8.3.min.js" charset="UTF-8"></script>
+	<!--<script type="text/javascript" src="/timepicker/jquery/jquery-1.8.3.min.js" charset="UTF-8"></script>-->
 	<script type="text/javascript" src="/timepicker/bootstrap/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="/timepicker/js/bootstrap-datetimepicker.js" charset="UTF-8"></script>
+	<!--<script type="text/javascript" src="/timepicker/js/bootstrap-datetimepicker.js" charset="UTF-8"></script>-->
 	<link href="/timepicker/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
-	<link href="/timepicker/css/bootstrap-datetimepicker.min.css" rel="stylesheet" media="screen">
+	<!--<link href="/timepicker/css/bootstrap-datetimepicker.min.css" rel="stylesheet" media="screen">-->
 
 	<!-- fontawesome -->
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
