added dropdown in navbar

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -320,6 +320,16 @@ hr.star-user:after {
 	border-radius: 50%;
 }
 
+.verticalFlip {
+	-moz-transform: scale(-1, 1);
+	-webkit-transform: scale(-1, 1);
+	-o-transform: scale(-1, 1);
+	-ms-transform: scale(-1, 1);
+	transform: scale(-1, 1);
+	margin-left: -1px;
+
+}
+
 .totalDebt {
 	margin-left: 0;
 }
