--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>BDUDB</title>
+	<title>BDU Members Area</title>
 
 	<!-- load javascripts -->
 
@@ -67,30 +67,39 @@
 		<div class="navbar-header">
 			<a class="navbar-brand" href="#/profile">
 				<span class="glyphicon glyphicon-cloud"></span>
-				BDUDB
+				<span>BDU</span><span style="display:inline-block" class="verticalFlip">BD</span>
 			</a>
 		</div>
 		<ul class="nav navbar-nav" ng-hide="!authenticated">
-			<li>
+			<li class="nav-item">
 				<a href="/#/profile" class="hidden-xs hidden-sm">Profile</a>
 				<a href="/#/profile" class="visible-xs visible-sm" data-toggle="collapse" data-target=".navbar-collapse">Profile</a>
 			</li>
-			<li>
+			<li class="nav-item">
 				<a href="/#/tournaments" class="hidden-xs hidden-sm">Tournaments</a>
 				<a href="/#/tournaments" class="visible-xs visible-sm" data-toggle="collapse" data-target=".navbar-collapse">Tournament</a>
 			</li>
-			<li>
+			<li class="nav-item">
 				<a href="/#/anmeldungen" class="hidden-xs hidden-sm">Reg Overview</a>
 				<a href="/#/anmeldungen" class="visible-xs visible-sm" data-toggle="collapse" data-target=".navbar-collapse">Reg Overview</a>
 			</li>
-			<li ng-show="istVorstand">
-				<a href="/#/vorstand" class="hidden-xs hidden-sm">Vorstand</a>
-				<a href="/#/vorstand" class="visible-xs visible-sm" data-toggle="collapse" data-target=".navbar-collapse">Vorstand</a>
+			<li ng-show="istVorstand" class="nav-item dropdown">
+				<a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					Vorstand
+				</a>
+				<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+					<a class="dropdown-item" href="/#/vorstand">Create Tournament</a>
+					<a class="dropdown-item" href="/#/finances">Finances</a>
+				</div>
 			</li>
-			<li ng-show="istVorstand">
-				<a href="/#/finances" class="hidden-xs hidden-sm">Finanzen</a>
-				<a href="/#/finances" class="visible-xs visible-sm" data-toggle="collapse" data-target=".navbar-collapse">Finanzen</a>
-			</li>
+			<!--<li ng-show="istVorstand">-->
+				<!--<a href="/#/vorstand" class="hidden-xs hidden-sm">Vorstand</a>-->
+				<!--<a href="/#/vorstand" class="visible-xs visible-sm" data-toggle="collapse" data-target=".navbar-collapse">Vorstand</a>-->
+			<!--</li>-->
+			<!--<li ng-show="istVorstand">-->
+				<!--<a href="/#/finances" class="hidden-xs hidden-sm">Finanzen</a>-->
+				<!--<a href="/#/finances" class="visible-xs visible-sm" data-toggle="collapse" data-target=".navbar-collapse">Finanzen</a>-->
+			<!--</li>-->
 		</ul>
 
 		<ul class="nav navbar-nav navbar-right" ng-show="authenticated">
