--- a/views/index.ejs
+++ b/views/index.ejs
@@ -64,10 +64,9 @@
 	</button>
 	<div class="collapse navbar-collapse" id="navbarBDUDB">
 
-		<div class="navbar-header">
-			<a class="navbar-brand" href="#/profile">
-				<span class="glyphicon glyphicon-cloud"></span>
-				<span>BDU</span><span style="display:inline-block" class="verticalFlip">BD</span>
+		<div class="navbar-header hidden-xs hidden-sm">
+			<a href="#/profile" class="navbar-left">
+				<img class="nav-logo" ng-src="http://debating.de/BDUDBdev/bdu_white_logo.png" onerror="this.src='images/bdu_quad.png'" alt=""/>
 			</a>
 		</div>
 		<ul class="nav navbar-nav" ng-hide="!authenticated">
