--- a/views/index.ejs
+++ b/views/index.ejs
@@ -110,14 +110,14 @@
 			</div>
 
 			<li>
-				<a href="/#" class="hidden-xs hidden-sm" ng-click="signout()"><span class="glyphicon glyphicon-log-out"></span> Logout</a>
-				<a href="/#" class="visible-xs visible-sm" data-toggle="collapse" data-target=".navbar-collapse" ng-click="signout()"><span class="glyphicon glyphicon-log-out"></span> Logout</a>
+				<a href="/#/" class="hidden-xs hidden-sm" ng-click="signout()"><span class="glyphicon glyphicon-log-out"></span> Logout</a>
+				<a href="/#/" class="visible-xs visible-sm" data-toggle="collapse" data-target=".navbar-collapse" ng-click="signout()"><span class="glyphicon glyphicon-log-out"></span> Logout</a>
 			</li>
 		</ul>
 
 		<ul class="nav navbar-nav navbar-right" ng-show="!authenticated">
-			<li><a href="/#" class="hidden-xs hidden-sm"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-			<li><a href="/#" class="visible-xs visible-sm" data-toggle="collapse" data-target=".navbar-collapse"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+			<li><a href="/#/" class="hidden-xs hidden-sm"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+			<li><a href="/#/" class="visible-xs visible-sm" data-toggle="collapse" data-target=".navbar-collapse"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
 			<li><a href="/#/signup" class="hidden-xs hidden-sm"><span class="glyphicon glyphicon glyphicon-user"></span> Signup</a></li>
 			<li><a href="/#/signup" class="visible-xs visible-sm" data-toggle="collapse" data-target=".navbar-collapse"><span class="glyphicon glyphicon glyphicon-user"></span> Signup</a></li>
 		</ul>
